--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Rock, Paper, Scissors Game</title>
+<style>
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>Rock, Paper, Scissors Game</h1>
-        <div class="game">
-            <button class="choice" id="rock">Rock</button>
-            <button class="choice" id="paper">Paper</button>
-            <button class="choice" id="scissors">Scissors</button>
-        </div>
-        <p id="result"></p>
-    </div>
-    <script src="script.js"></script>
+
+<h2><b>🥇Training Module 1: The Basics</b></h2><p>
+
+👋🏼 As a starting point, please read through the following materials to familiarise yourself with our Chatting SOPs, best practises and guides.<br> They should provide you with foundational knowledge on the basics of chatting.<p>
+
+
+<a href="https://htmlpreview.github.io/?https://github.com/rebyrth1/rps/blob/main/1%20Chatting%20Psychology.html" target="_blank">⛩️ Chatting Psychology</a><p>
+
+<a href="https://htmlpreview.github.io/?https://github.com/rebyrth1/rps/blob/main/2%20Understanding%20Sets.html" target="_blank">⚙️ Understanding Sets</a><p>
+
+<a href="https://htmlpreview.github.io/?https://github.com/rebyrth1/rps/blob/main/3%20Sales.html" target="_blank">💰 Sales</a><p>
+
+<a href="https://htmlpreview.github.io/?https://github.com/rebyrth1/rps/blob/main/4%20Process%20Guide.html" target="_blank">🔧 Process Guide</a><p>
+
+<a href="https://htmlpreview.github.io/?https://github.com/rebyrth1/rps/blob/main/5%20Cheat%20Sheet.html" target="_blank">📜 Cheat Sheet</a>
+
 </body>
 </html>
+
